# visual_genome_python_driver

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  create_local_dataset.py  download_data.sh  mypy.ini  pyproject.toml  setup.py
tests/: test_scene_graph.py
visual_genome/: __init__.py  api.py  local.py  models.py  utils.py
