[tool.poetry]
name = "compguesswhat"
version = "1.0.0"
description = ""
authors = [
	"Alessandro Suglia <alessandro.suglia@gmail.com>",
	"Amit Parekh <amit@amitkparekh.com>",
]
homepage = "https://compguesswhat.github.io"
repository = "https://github.com/CompGuessWhat/visual_genome_python_driver"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Topic :: Software Development :: Libraries",
]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
nltk = "^3.6.2"
tqdm = "^4.61.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.902"
wemake-python-styleguide = "^0.15.2"
pre-commit = "^2.13.0"

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2

[tool.mypy]
python_version = "3.8"

# Import discovery
ignore_missing_imports = true
follow_imports = "normal"

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_generics = false

# Untyped definitions and calls
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

# Warnings
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# Config error messages
show_error_context = false
show_column_numbers = true
pretty = false
